--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
 click==7.1.2
+cryptography==2.9.2
 Flask==1.1.2
 flask-marshmallow==0.13.0
 Flask-SQLAlchemy==2.4.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 marshmallow==3.8.0
 marshmallow-sqlalchemy==0.23.1
+pkg-resources==0.0.0
+pycparser==2.20
+requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.19
+urllib3==1.25.10
 Werkzeug==1.0.1
